# technezis

./: .env.example  README.md  data.py  data.xlsx  main.py  pyproject.toml
